--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Hello Everyone! Welcome To My Page</h1>
-    <div class="profile-pic"><img class="Myself" src="farewell.jpg"  border: solid white 1px; padding: 2px;></div>
+    <div class="profile-pic"><img class="Myself" src="/assets/farewell.jpg"  border: solid white 1px; padding: 2px;></div>
     <div class="intro">
         
         <h2>About Me!</h2>
