--- a/index2.html
+++ b/index2.html
@@ -18,12 +18,12 @@
 </div>
 <div class="images">
     <h1>My Image Gallery</h1>
-    <img src="WhatsApp Image 2023-03-31 at 18.19.38.jpeg" class="Myself" alt="">
-    <img src="WhatsApp Image 2023-03-31 at 18.19.42.jpeg" class="Myself" alt="">
-    <img src="WhatsApp Image 2023-03-31 at 18.19.44 (1).jpeg" class="Myself" alt="">
-    <img src="WhatsApp Image 2023-03-31 at 18.19.44 (2).jpeg" class="Myself" alt="">
-    <img src="WhatsApp Image 2023-03-31 at 18.19.44.jpeg" class="Myself" alt="">
-    <img src="WhatsApp Image 2023-03-31 at 18.19.58.jpeg" class="Myself" alt=""> 
+    <img src="/assets/WhatsApp Image 2023-03-31 at 18.19.38.jpeg" class="Myself" alt="">
+    <img src="/assets/WhatsApp Image 2023-03-31 at 18.19.42.jpeg" class="Myself" alt="">
+    <img src="/assets/WhatsApp Image 2023-03-31 at 18.19.44 (1).jpeg" class="Myself" alt="">
+    <img src="/assets/WhatsApp Image 2023-03-31 at 18.19.44 (2).jpeg" class="Myself" alt="">
+    <img src="/assets/WhatsApp Image 2023-03-31 at 18.19.44.jpeg" class="Myself" alt="">
+    <img src="/assets/WhatsApp Image 2023-03-31 at 18.19.58.jpeg" class="Myself" alt=""> 
 </div>
 <div class="Contact">
     <div class="bottom-block">
